--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<meta name="author" content="Codrops">
 	<link rel="shortcut icon" href="favicon.26242483.ico">
 	<link rel="stylesheet" href="https://use.typekit.net/vts4lgd.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="base.d0d64955.css">
 	<script>document.documentElement.className = "js";
 
@@ -22,7 +25,29 @@ var supportsCssVars = function supportsCssVars() {
 supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 </head>
 <body class="loading">
+	<!-- <nav class="navigation">
+		<ul class="navigation__list">
+			<li class="navigation__item"><a class="navigation__link" data-animation="magnetic" href="/">
+				<span class="navigation__link__text" style="transform: translate(0.0322px, 0.0062px);">Isabel Moranta</span></a>
+			</li>
+			<li class="navigation__item"><a class="navigation__link" data-animation="magnetic" href="/about">
+				<span class="navigation__link__text" style="transform: translate(0.01px, 0.0051px);">About</span></a>
+			</li>
+		</ul>
+	</nav> -->
+	<nav class="navigation">
+		<a href="/" aria-current="page" class="home nuxt-link-exact-active nuxt-link-active">
+			jizni corrine
+		</a>
+		<a href="/work" class="projects" style="">Projects
+			<svg viewBox="0 0 84 60" class="hover"><ellipse cx="42" cy="30" rx="40" ry="28" stroke-width="1.5" style="stroke-dashoffset: 214.949; stroke-dasharray: 214.949;" class="animate"></ellipse></svg>
+		</a>
+		<a href="/about" class="about" style="">About
+			<svg viewBox="0 0 80 56" class="hover"><ellipse cx="40" cy="28" rx="38" ry="26" stroke-width="1.5" style="stroke-dashoffset: 202.189; stroke-dasharray: 202.189;" class="animate"></ellipse></svg>
+		</a>
+	</nav>
 	<main>
+
 		<h4>selected works</h4>
 		<nav class="menu">
 			<a class="menu__item" data-img="img/demo1/1.jpg">
@@ -51,6 +76,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 	<svg class="cursor" width="40" height="40" viewBox="0 0 40 40">
 		<circle class="cursor__inner" cx="20" cy="20" r="10"></circle>
 	</svg>
-	<script src="demo1.151408fb.js"></script>
+	<!-- <script src="demo1.151408fb.js"></script> -->
+	<script src="demo2.44794d1a.js"></script>
 </body>
 </html>
