--- a/index.html
+++ b/index.html
@@ -46,10 +46,25 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			<svg viewBox="0 0 80 56" class="hover"><ellipse cx="40" cy="28" rx="38" ry="26" stroke-width="1.5" style="stroke-dashoffset: 202.189; stroke-dasharray: 202.189;" class="animate"></ellipse></svg>
 		</a>
 	</nav>
+	
 	<main>
-
-		<h4>selected works</h4>
+		
 		<nav class="menu">
+			<div class="header">
+				<h1 class="title">Jizni Corrine</h1>
+				<div class="bottom">
+					<div class="desc">
+						<h2 class="mt-0">PH based web/graphic designer + web developer focused on delivering unforgettable user experience</h2>
+					</div>
+					<div class="cta">
+						<h2 class="mt-0">let's talk</h2>
+						<a class="btn">say hello!</a>
+					</div>
+				</div>
+				</div>
+				
+				<h4>selected works</h4>
+			
 			<a class="menu__item" data-img="img/demo1/1.jpg">
 				<span class="menu__item-text"><span class="menu__item-textinner">Island Pediatrics</span></span>
 				<span class="menu__item-sub">web design</span>
