--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="base.d0d64955.css">
+	<link rel="stylesheet" type="text/css" href="css/spacing.css">
 	<script>document.documentElement.className = "js";
 
 var supportsCssVars = function supportsCssVars() {
@@ -57,34 +58,261 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						<h2 class="mt-0">PH based web/graphic designer + web developer focused on delivering unforgettable user experience</h2>
 					</div>
 					<div class="cta">
-						<h2 class="mt-0">let's talk</h2>
+						<h2 class="mt-0 mb-20">let's talk</h2>
 						<a class="btn">say hello!</a>
 					</div>
 				</div>
-				</div>
+			</div>
 				
-				<h4>selected works</h4>
-			
-			<a class="menu__item" data-img="img/demo1/1.jpg">
-				<span class="menu__item-text"><span class="menu__item-textinner">Island Pediatrics</span></span>
-				<span class="menu__item-sub">web design</span>
-			</a>
-			<a class="menu__item" data-img="img/demo1/2.jpg">
-				<span class="menu__item-text"><span class="menu__item-textinner">Renter Match</span></span>
-				<span class="menu__item-sub">mobile design</span>
-			</a>
-			<a class="menu__item" data-img="img/demo1/3.jpg">
-				<span class="menu__item-text"><span class="menu__item-textinner">Stamford Shipping</span></span>
-				<span class="menu__item-sub">web development</span>
-			</a>
-			<a class="menu__item" data-img="img/demo1/4.jpg">
-				<span class="menu__item-text"><span class="menu__item-textinner">MapleStorySEA</span></span>
-				<span class="menu__item-sub">graphic design</span>
-			</a>
-			<a class="menu__item" data-img="img/demo1/5.jpg">
-				<span class="menu__item-text"><span class="menu__item-textinner">ICI</span></span>
-				<span class="menu__item-sub">website + branding</span>
-			</a>
+			<div id="content">
+				<div class="section-title section-divider-div">
+					<div class="divider-full-width"></div>
+					<div class="section-heading">selected work</div>
+					<div class="divider-full-width"></div>
+				</div>
+				<div class="menu-container">
+					<a class="menu__item" data-img="img/demo1/1.jpg">
+						<span class="menu__item-text"><span class="menu__item-textinner">Island Pediatrics</span></span>
+						<span class="menu__item-sub">web design</span>
+					</a>
+					<a class="menu__item" data-img="img/demo1/2.jpg">
+						<span class="menu__item-text"><span class="menu__item-textinner">Renter Matchmaker</span></span>
+						<span class="menu__item-sub">mobile design</span>
+					</a>
+					<a class="menu__item" data-img="img/demo1/3.jpg">
+						<span class="menu__item-text"><span class="menu__item-textinner">Stamford Shipping</span></span>
+						<span class="menu__item-sub">web development</span>
+					</a>
+					<a class="menu__item" data-img="img/demo1/4.jpg">
+						<span class="menu__item-text"><span class="menu__item-textinner">MapleStorySEA</span></span>
+						<span class="menu__item-sub">graphic design</span>
+					</a>
+					<a class="menu__item" data-img="img/demo1/5.jpg">
+						<span class="menu__item-text"><span class="menu__item-textinner">ICI</span></span>
+						<span class="menu__item-sub">website + branding</span>
+					</a>
+				</div>
+
+				<div class="section-title section-divider-div">
+					<div class="divider-full-width"></div>
+					<div class="section-heading">some clients</div>
+					<div class="divider-full-width"></div>
+				</div>
+				<div id="promo-notifications">
+					<ul>  
+				    <li>
+				    	<div class="client">
+						    <div class="">Wendy's VI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Heartsaver Pharmacy</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">ICI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Gaisano</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Island Pediatrics</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Lasinja</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Grapetree Bay Hotel</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">USVI Film</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">VITRAN</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Maple Story SEA</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">IPSOS</div>
+						    <div class="client-separator">/</div>
+						</div>
+						
+					</li>
+					<li></li>
+				  </ul>
+				  <div class="marquee">
+					  <div class="track">
+					    <div class="clients">
+					    <div class="client">
+						    <div class="">Wendy's VI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Heartsaver Pharmacy</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">ICI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Gaisano</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Island Pediatrics</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Lasinja</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Grapetree Bay</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">USVI Film</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">VITRAN</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Maple Story SEA</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">IPSOS</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">iBotika</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">My Virgin Islands</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Custom Builders</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Style and Stitch</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Agilent</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Dcypher</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Poptax</div>
+						    <div class="client-separator">/</div>
+						</div>
+					    </div>
+					  </div>
+					  <div class="track2">
+					    <div class="clients">
+					    	<div class="client">
+						    <div class="">Wendy's VI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Heartsaver Pharmacy</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">ICI</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Gaisano</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Island Pediatrics</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Lasinja</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Grapetree Bay</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">USVI Film</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">VITRAN</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Maple Story SEA</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">IPSOS</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">iBotika</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">My Virgin Islands</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Custom Builders</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Style and Stitch</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Agilent</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Dcypher</div>
+						    <div class="client-separator">/</div>
+						</div>
+						<div class="client">
+						    <div class="">Poptax</div>
+						    <div class="client-separator">/</div>
+						</div>
+					    </div>
+					  </div>
+					</div>
+					<div class="marquee">
+						<div class="marquee__inner" aria-hidden="true">
+							<span>Showreel</span>
+							<span>Showreel</span>
+							<span>Showreel</span>
+							<span>Showreel</span>
+						</div>
+					</div>
+				</div>
+			</div>
 			
 		</nav>
 	</main>
@@ -92,6 +320,22 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 		<circle class="cursor__inner" cx="20" cy="20" r="10"></circle>
 	</svg>
 	<!-- <script src="demo1.151408fb.js"></script> -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="demo2.44794d1a.js"></script>
+	<script type="text/javascript">
+		jQuery(document).ready(function($) {
+		  var promoticker = function() {
+		    var window_width = window.innerWidth;
+		    var speed = 14 * window_width;
+		    $('#promo-notifications li:first').animate( {left: '-980px'}, speed, 'linear', function() {
+		      $(this).detach().appendTo('#promo-notifications ul').css('left', "100%");
+		      promoticker();
+		    });
+		  };
+		  if ($("#promo-notifications li").length > 1) {
+		    promoticker();
+		  }
+		});
+	</script>
 </body>
 </html>
