--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="base.d0d64955.css">
 	<link rel="stylesheet" type="text/css" href="css/spacing.css">
 	<script>document.documentElement.className = "js";
@@ -95,64 +96,18 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 
 				<div class="section-title section-divider-div">
 					<div class="divider-full-width"></div>
-					<div class="section-heading">some clients</div>
+					<div class="section-heading">some patrons</div>
 					<div class="divider-full-width"></div>
 				</div>
-				<div id="promo-notifications">
-					<ul>  
-				    <li>
-				    	<div class="client">
-						    <div class="">Wendy's VI</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Heartsaver Pharmacy</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">ICI</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Gaisano</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Island Pediatrics</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Lasinja</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Grapetree Bay Hotel</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">USVI Film</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">VITRAN</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Maple Story SEA</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">IPSOS</div>
-						    <div class="client-separator">/</div>
-						</div>
-						
-					</li>
-					<li></li>
-				  </ul>
-				  <div class="marquee">
-					  <div class="track">
-					    <div class="clients">
-					    <div class="client">
+
+			</div>
+
+			<div class="client-container">
+			 <!--  <p class="link link_animated">
+			      Wendy's VI&nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;Heartsaver Pharmacy&nbsp;&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;Grapetree Bay Hotel — Gaisano — Lasinja — USVI Film — VITRAN — My Virgin Islands — Custom Builders — IPSOS — iBotika — Dcypher — Style & Stitch — Poptax — Agilent
+			      </p> -->
+			      <div class="link link_animated">
+			      	<div class="client">
 						    <div class="">Wendy's VI</div>
 						    <div class="client-separator">/</div>
 						</div>
@@ -224,96 +179,32 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 						    <div class="">Poptax</div>
 						    <div class="client-separator">/</div>
 						</div>
-					    </div>
-					  </div>
-					  <div class="track2">
-					    <div class="clients">
-					    	<div class="client">
-						    <div class="">Wendy's VI</div>
-						    <div class="client-separator">/</div>
-						</div>
 						<div class="client">
-						    <div class="">Heartsaver Pharmacy</div>
-						    <div class="client-separator">/</div>
+						    <div class="">Subay PH</div>
+						    <!-- <div class="client-separator">/</div> -->
 						</div>
-						<div class="client">
-						    <div class="">ICI</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Gaisano</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Island Pediatrics</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Lasinja</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Grapetree Bay</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">USVI Film</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">VITRAN</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Maple Story SEA</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">IPSOS</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">iBotika</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">My Virgin Islands</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Custom Builders</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Style and Stitch</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Agilent</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Dcypher</div>
-						    <div class="client-separator">/</div>
-						</div>
-						<div class="client">
-						    <div class="">Poptax</div>
-						    <div class="client-separator">/</div>
-						</div>
-					    </div>
-					  </div>
+			      </div>
+			</div>
+			<div class="divider-full-width"></div>
+
+			<div class="container">
+				<div class="footer">
+					<div class="services">
+						<h2 class="mt-0">offers</h2>
+						<p>UI/UX design, graphic design, branding, product design, front-end development, web development, business automation and more</p>
 					</div>
-					<div class="marquee">
-						<div class="marquee__inner" aria-hidden="true">
-							<span>Showreel</span>
-							<span>Showreel</span>
-							<span>Showreel</span>
-							<span>Showreel</span>
-						</div>
+					<div class="cta">
+						<h2 class="mt-0 mb-20">more</h2>
+						<a class="social mb-5" href="">LinkedIn <span class="material-icons">north_east</span> </a>
+						<a class="social mb-5" href="">Whatsapp <span class="material-icons">north_east</span> </a>
+						<a class="social" href=""><span class="material-icons">south</span> CV </a>
 					</div>
 				</div>
 			</div>
-			
+
+			<div class="container">
+				<a href="" class="big-text">get a free quote</a>
+			</div>
 		</nav>
 	</main>
 	<svg class="cursor" width="40" height="40" viewBox="0 0 40 40">
@@ -322,20 +213,5 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 	<!-- <script src="demo1.151408fb.js"></script> -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="demo2.44794d1a.js"></script>
-	<script type="text/javascript">
-		jQuery(document).ready(function($) {
-		  var promoticker = function() {
-		    var window_width = window.innerWidth;
-		    var speed = 14 * window_width;
-		    $('#promo-notifications li:first').animate( {left: '-980px'}, speed, 'linear', function() {
-		      $(this).detach().appendTo('#promo-notifications ul').css('left', "100%");
-		      promoticker();
-		    });
-		  };
-		  if ($("#promo-notifications li").length > 1) {
-		    promoticker();
-		  }
-		});
-	</script>
 </body>
 </html>
